logo can now be used everywhere

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./pages/homePage/homePage.css">
+        <link rel="stylesheet" href="./components/header/header.css">
+        <link rel="stylesheet" href="./pages/mainPage/decades/decades.css">
         <link rel="stylesheet" href="./index.css">
         <title>Document</title>
     </head>
