--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="./index.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./pages/homePage/homePage.css">
         <link rel="stylesheet" href="./components/header/header.css">
         <link rel="stylesheet" href="./pages/mainPage/decades/decades.css">
-        <link rel="stylesheet" href="./index.css">
+        <link rel="stylesheet" href="./pages/mainPage/mostPlayedPage/mostPlayedPage.css">
         <title>Document</title>
     </head>
     <body>
