Edited some CSS Specs

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,8 @@
         <link rel="stylesheet" href="./components/header/header.css">
         <link rel="stylesheet" href="./pages/mainPage/decadesPage/decadesPage.css">
         <link rel="stylesheet" href="./pages/mainPage/mostPlayedPage/mostPlayedPage.css">
-        <title>Document</title>
+        <link rel="stylesheet" href="./pages/mainPage/genresPage/genresPage.css">
+        <title>Visualify</title>
     </head>
     <body>
         <div id="wrapper"></div>
