--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="./pages/mainPage/decadesPage/decadesPage.css">
         <link rel="stylesheet" href="./pages/mainPage/mostPlayedPage/mostPlayedPage.css">
         <link rel="stylesheet" href="./pages/mainPage/genresPage/genresPage.css">
+        <link rel="stylesheet" href="./pages/mainPage/moodsPage/moodsPage.css">
         <title>Visualify</title>
     </head>
     <body>
