--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
     <body>
         <div id="wrapper"></div>
         <script src="./logic/d3.v7.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/gh/holtzy/D3-graph-gallery@master/LIB/d3.layout.cloud.js"></script>
         <script type="module" src="./index.js"></script>
     </body>
 </html>
