added new css file

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="./pages/mainPage/mostPlayedPage/mostPlayedPage.css">
         <link rel="stylesheet" href="./pages/mainPage/genresPage/genresPage.css">
         <link rel="stylesheet" href="./pages/mainPage/moodsPage/moodsPage.css">
+        <link rel="stylesheet" href="./pages/mainPage/mapPage/mapPage.css">
         <title>Visualify</title>
     </head>
     <body>
