added css to side buttons

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="./pages/mainPage/genresPage/genresPage.css">
         <link rel="stylesheet" href="./pages/mainPage/moodsPage/moodsPage.css">
         <link rel="stylesheet" href="./pages/mainPage/mapPage/mapPage.css">
+        <link rel="stylesheet" href="./components/sideButtons/sideButtons.css">
         <title>Visualify</title>
     </head>
     <body>
