summary page is now completed

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="./pages/mainPage/moodsPage/moodsPage.css">
         <link rel="stylesheet" href="./pages/mainPage/mapPage/mapPage.css">
         <link rel="stylesheet" href="./components/sideButtons/sideButtons.css">
+        <link rel="stylesheet" href="./pages/mainPage/summaryPage/summaryPage.css">
         <title>Visualify</title>
     </head>
     <body>
